implement scss and sass loader

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,11 @@
+$primary: blueviolet;
+
 #header {
-  color: blueviolet;
+  color: $primary;
 }
 
 .shopList {
-  background: blueviolet;
+  background: $primary;
 }
 
 .btn {
